--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1,5 +1,22 @@
 {
     "en": {
+    	"core_tangent_commandpost_functions_label"	: "Tangent: CommandPost Functions",
+    	"core_tangent_os_pasteboard_label"			: "Tangent: Pasteboard",
+    	"finalcutpro_tangent_playback_label"		: "Tangent: Playback",
+    	"play"										: "Play",
+		"playSelection"								: "Play Selection",
+		"playAround"								: "Play Around",
+		"playFromBeginning"							: "Play From Beginning",
+		"playToEnd"									: "Play to End",
+		"playFullScreen"							: "Play Full Screen",
+		"loopPlayback"								: "Loop Playback",
+		"goToBeginning"								: "Go to Beginning",
+		"goToEnd"									: "Go to End",
+		"goToRangeStart"							: "Go to Range Start",
+		"goToRangeEnd"								: "Go to Range End",
+		"goToNextFrame"								: "Go to Next Frame",
+		"goToPreviousFrame"							: "Go to Previous Frame",
+    	"playback"									: "Playback",
     	"finalcutpro_midi_controls_controlui_label" : "MIDI Controls: Control FCP UI",
     	"finalcutpro_midi_controls_video_label"		: "MIDI Controls: Video Inspector",
     	"finalcutpro_tangent_open_label"			: "Tangent: Open Final Cut Pro",
