--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -17,7 +17,8 @@
 		"goToNextFrame"								: "Go to Next Frame",
 		"goToPreviousFrame"							: "Go to Previous Frame",
     	"playback"									: "Playback",
-    	"finalcutpro_midi_controls_controlui_label" : "MIDI Controls: Control FCP UI",
+    	"finalcutpro_midi_controls_controlui_absolute_label" : "MIDI Controls: Control FCP UI (Absolute)",
+    	"finalcutpro_midi_controls_controlui_relative_label" : "MIDI Controls: Control FCP UI (Relative)",
     	"finalcutpro_midi_controls_video_label"		: "MIDI Controls: Video Inspector",
     	"finalcutpro_tangent_open_label"			: "Tangent: Open Final Cut Pro",
     	"finalcutpro_tangent_video_label"			: "Tangent: Video Inspector",
@@ -25,6 +26,7 @@
     	"addedFCPUIElementToMIDI"					: "Registered Final Cut Pro User Interface Element to MIDI Control",
 	    "noFCPUIElementDetected"					: "No existing Final Cut Pro User Interface Element Registered",
 	    "invalidFCPUIElement"						: "Invalid User Interface Element",
+	    "controlFCPUIElementAbsolute"				: "Control Final Cut Pro User Interface Element (Absolute)",
 	    "controlFCPUIElementRelative"				: "Control Final Cut Pro User Interface Element (Relative)",
 	    "controlFCPUIElementRelativeNote"			: "Hover mouse over a UI Element, hold CONTROL, then adjust MIDI Knob/Fader to register.",
     	"midiVideoInspector"						: "Controls the Final Cut Pro Video Inspector via a MIDI Knob or Slider",
