--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1067,13 +1067,13 @@
         "colorBoardShowSaturation"                             : "Color Board: Show Saturation",
         "colorBoardShowExposure"                               : "Color Board: Show Exposure",
         "colorBoardNextPane"                                   : "Color Board: Next Pane",
-        "colorBoardPreviousPane"                               : "Color Board: Previous Pane"
+        "colorBoardPreviousPane"                               : "Color Board: Previous Pane",
         "unmountExternalDrives_title"                          : "Unmount External Drives",
         "mountExternalDrives_title"                            : "Mount External Drives",
         "unmountingExternalDrivesMsg"                          : "Unmounting external drives...",
         "mountingExternalDrivesMsg"                            : "Mounting external drives...",
         "driveManagement"                                      : "Drive Management",
         "autoUnmountOnBattery"                                 : "Unmount external drives when switching to battery power",
-        "autoMountOnAC"                                        : "Mount external drives when switching to AC power"
+        "autoMountOnAC"                                        : "Mount external drives when switching to AC power",
     }
 }
