--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -160,7 +160,7 @@
         "selectDestinationFolder"              : "Please select a Destination Folder:",
         "core_action_manager_label"            : "Manager: Actions",
         "compressorError"                      : "Something went wrong when sending to Compressor.",
-        "ignoreProxies"                        : "Ignore Proxies",
+        "ignoreProxies"                        : "Ignore Proxies Warning",
         "finder_texttools_label"               : "Text Tools",
         "core_setup_label"                     : "Manager: Setup",
         "cpTransition3_title"                  : "Apply Transition 3",
@@ -662,7 +662,7 @@
         "resetShortcutsAllToNone"                            : "Set All Shortcuts to None",
         "core_menu_helpandsupport_commandpost_label"         : "Menubar: CommandPost Help & Support",
         "voiceCommandsError"                                 : "Voice Commands could not be activated.\n\nPlease try again.",
-        "setDestinationPreset"                               : "Set Destination Preset",
+        "changeDestinationPreset"                            : "Change Destination Preset",
         "timeline"                                           : "Timeline",
         "cpAudioEffect3_title"                               : "Apply Audio Effect 3",
         "cpMoveAndResizeUndo_title"                          : "Undo Last Move & Resize",
@@ -751,7 +751,7 @@
         "shortcutsPanelLabel"                                  : "Shortcuts",
         "webappPanelLabel"                                     : "WebApp",
         "applicationAPIKey"                                    : "Application API Key",
-        "setDestinationFolder"                                 : "Set Destination Folder",
+        "changeDestinationFolder"                              : "Change Destination Folder",
         "hudDropZoneText"                                      : "Drag from Browser to Here",
         "core_menu_helpandsupport_label"                       : "Menubar: Help & Support Section",
         "touchBarReset"                                        : "Reset All Touch Bar Items",
@@ -797,7 +797,7 @@
         "pluginsPanelTooltip"                                  : "Plugins Preferences",
         "finalcutpro_browser_playhead_label"                   : "Browser: Playhead Features",
         "global_cmds_action"                                   : "Global Commands",
-        "ignoreMissingEffects"                                 : "Ignore Missing & Offline Files",
+        "ignoreMissingEffects"                                 : "Ignore Missing & Offline Files Warning",
         "showTimelineInPlayer"                                 : "Show Timeline in Player",
         "showTitles"                                           : "Show Titles",
         "cpCreateMulticamOptimizedMediaOff_title"              : "Disable Multicam Optimized Media",
