--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -316,10 +316,15 @@
         "addedToCompressor"                                : "Added to Compressor:",
         "core_touchbar_widgets_windowslide_label"          : "Widget: Window Slider",
         "select"                                           : "Select",
-        "batchExportComplete"                              : "Batch Export is now complete. The selected clips have been added to your render queue.",
+        "batchExportComplete"                              : "Batch Export is now complete.\n\nThe selected clips/projects have been added to your Final Cut Pro or Compressor render queue.",
         "batchExportNoClipsSelected"                       : "Please ensure that at least one clip is selected for export.",
         "puck"                                             : "Puck",
         "batchExport"                                      : "Batch Export",
+        "batchExportProxyFilesDetected"					   : "Proxy files were detected, which has aborted the Batch Export.\n\nProxy files can be ignored via the Batch Export Preferences if required.",
+        "batchExportModeError"							   : "Your mouse must be hovering over either the Timeline or the Browser to use the Batch Export functionality.",
+        "batchExportNoClipsInBrowser"                      : "No clips selected in the browser.\n\nPlease select at least one clip, Keyword Collection or Smart Collection and try again.",
+        "batchExportNoClipsInTimeline"					   : "No clips selected in the timeline.\n\nPlease select at least one clip and try again.",
+        "batchExportMissingFilesDetected"				   : "Missing or offline titles, effects or generators were detected, which has aborted the Batch Export.\n\nMissing & Offline Effects can be ignored via the Batch Export Preferences if required.",
         "whatFeatures"                                     : "What feature would you like to see implemented or improved?",
         "plugin_group_plugin"                              : "Plugin",
         "finalcutpro_menu_helpandsupport_finalcutpro_label": "Menubar: Final Cut Pro Help & Support",
