--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -799,6 +799,7 @@
         "application"                                          : "Application",
         "four"                                                 : "4",
         "colorboard_group"                                     : "Colour Board",
+        "colorWheels_group"									   : "Color Wheels",
         "mediaImport_group"                                    : "Media Import",
         "draggable"                                            : "Draggable",
         "pluginsPanelTooltip"                                  : "Plugins Preferences",
@@ -1091,6 +1092,22 @@
         "onlyOneBrowserClipMustBeSelected"                     : "Only one clip can be selected in the browser to use this feature.",
         "pasteboardToMarkersCompleted"                         : "Copying Pasteboard Markers to Selected Clip in Browser has completed successfully.",
         "finalcutpro_browser_pasteboardtomarkers_label"        : "Browser: Pasteboard Markers to Clip",
-        "finalcutpro_bugfix_clipselection_label"               : "Bugfix: FCPX 10.4.1 Rogue Clip Selection"
+        "finalcutpro_bugfix_clipselection_label"               : "Bugfix: FCPX 10.4.1 Rogue Clip Selection",
+		"cpResetMasterColorWheelColor_title"                   : "Reset Master Color Wheel Color",
+		"cpResetMasterColorWheelSaturation_title"      		   : "Reset Master Color Wheel Saturation",
+		"cpResetMasterColorWheelBrightness_title"              : "Reset Master Color Wheel Brightness",
+		"cpResetColorWheelTemperature_title"                   : "Reset Color Wheel Temperature",
+		"cpResetColorWheelTint_title"                          : "Reset Color Wheel Tint",
+		"cpResetColorWheelHue_title"                           : "Reset Color Wheel Hue",
+		"cpResetColorWheelMix_title"                           : "Reset Color Wheel Mix",
+    	"cpResetShadowsColorWheelColor_title"                  : "Reset Shadows Color Wheel Color",
+		"cpResetShadowsColorWheelSaturation_title"             : "Reset Shadows Color Wheel Saturation",
+		"cpResetShadowsColorWheelBrightness_title"             : "Reset Shadows Color Wheel Brightness",
+		"cpResetMidtonesColorWheelColor_title"                 : "Reset Midtones Color Wheel Color",
+		"cpResetMidtonesColorWheelSaturation_title"            : "Reset Midtones Color Wheel Saturation",
+		"cpResetMidtonesColorWheelBrightness_title"            : "Reset Midtones Color Wheel Brightness",
+		"cpResetHighlightsColorWheelColor_title"               : "Reset Highlights Color Wheel Color",
+		"cpResetHighlightsColorWheelSaturation_title"          : "Reset Highlights Color Wheel Saturation",
+		"cpResetHighlightsColorWheelBrightness_title"          : "Reset Highlights Color Wheel Brightness",
     }
 }
