--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1144,5 +1144,6 @@
 		"cpPasteTextAsCaption_title"						   : "Paste Text as Caption",
 		"finalcutpro_timeline_captions_label"		           : "Timeline: Captions",
 		"finalcutpro_console_font_label"					   : "Console: Font",
+		"finalcutpro_fullscreen_dockicon_label"				   : "Full Screen Dock Icon Manager",
     }
 }
