#1251 * Moved checks for "proxy" and "missing media" into ExportDialog, using `Alert`. * Added test for ExportDialog * Added support for `Viewer:usingProxies()` and `Viewer:betterQuality()` reading and writing.
#1252
* Fixed issue with `fcp:get/setProperty(...)` methods not working.

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -202,7 +202,7 @@
         "resetIncrementalNumber"                           : "Reset Incremental Number",
         "sendCrashData"                                    : "Send Crash Data (requires restart)",
         "browser_group"                                    : "Browser",
-        "browser"										   : "Browser",
+        "browser"                                          : "Browser",
         "core_quit_label"                                  : "Quit Command",
         "cpMoveAndResizeCornerNorthEast_title"             : "Move & Resize Focussed Window: Top Right Corner",
         "plugin_action_disable"                            : "Disable",
@@ -320,11 +320,12 @@
         "batchExportNoClipsSelected"                       : "Please ensure that at least one clip is selected for export.",
         "puck"                                             : "Puck",
         "batchExport"                                      : "Batch Export",
-        "batchExportProxyFilesDetected"					   : "Proxy files were detected, which has aborted the Batch Export.\n\nProxy files can be ignored via the Batch Export Preferences if required.",
-        "batchExportModeError"							   : "Your mouse must be hovering over either the Timeline or the Browser to use the Batch Export functionality.",
+        "batchExportProxyFilesDetected"                    : "Proxy files were detected, which has aborted the Batch Export.\n\nProxy files can be ignored via the Batch Export Preferences if required.",
+        "batchExportModeError"                             : "Your mouse must be hovering over either the Timeline or the Browser to use the Batch Export functionality.",
         "batchExportNoClipsInBrowser"                      : "No clips selected in the browser.\n\nPlease select at least one clip, Keyword Collection or Smart Collection and try again.",
-        "batchExportNoClipsInTimeline"					   : "No clips selected in the timeline.\n\nPlease select at least one clip and try again.",
-        "batchExportMissingFilesDetected"				   : "Missing or offline titles, effects or generators were detected, which has aborted the Batch Export.\n\nMissing & Offline Effects can be ignored via the Batch Export Preferences if required.",
+        "batchExportNoClipsInTimeline"                     : "No clips selected in the timeline.\n\nPlease select at least one clip and try again.",
+        "batchExportMissingFilesDetected"                  : "Missing or offline titles, effects or generators were detected, which has aborted the Batch Export.\n\nMissing & Offline Effects can be ignored via the Batch Export Preferences if required.",
+        "batchExportUnexpectedAlert"                       : "Unexpected alert while opening the Export dialog.",
         "whatFeatures"                                     : "What feature would you like to see implemented or improved?",
         "plugin_group_plugin"                              : "Plugin",
         "finalcutpro_menu_helpandsupport_finalcutpro_label": "Menubar: Final Cut Pro Help & Support",
@@ -684,7 +685,6 @@
         "tip"                                                : "Tip",
         "showButtons"                                        : "Show Buttons",
         "core_preferences_menuitem_label"                    : "Preferences: Menu Item",
-        "pasteboard"                                         : "Pasteboard",
         "finalcutpro_touchbar_widgets_zoom_label"            : "Widget: Timeline Zoom",
         "hud"                                                : "HUD",
         "advanced"                                           : "Advanced",
@@ -758,7 +758,6 @@
         "shortcutsPanelLabel"                                  : "Shortcuts",
         "webappPanelLabel"                                     : "WebApp",
         "applicationAPIKey"                                    : "Application API Key",
-        "changeDestinationFolder"                              : "Change Destination Folder",
         "hudDropZoneText"                                      : "Drag from Browser to Here",
         "core_menu_helpandsupport_label"                       : "Menubar: Help & Support Section",
         "touchBarReset"                                        : "Reset All Touch Bar Items",
@@ -799,7 +798,7 @@
         "application"                                          : "Application",
         "four"                                                 : "4",
         "colorboard_group"                                     : "Colour Board",
-        "colorWheels_group"									   : "Color Wheels",
+        "colorWheels_group"                                    : "Color Wheels",
         "mediaImport_group"                                    : "Media Import",
         "draggable"                                            : "Draggable",
         "pluginsPanelTooltip"                                  : "Plugins Preferences",
@@ -1092,58 +1091,58 @@
         "pasteboardToMarkersCompleted"                         : "Copying Pasteboard Markers to Selected Clip in Browser has completed successfully.",
         "finalcutpro_browser_pasteboardtomarkers_label"        : "Browser: Pasteboard Markers to Clip",
         "finalcutpro_bugfix_clipselection_label"               : "Bugfix: FCPX 10.4.1 Rogue Clip Selection",
-		"cpResetMasterColorWheelColor_title"                   : "Reset Master Color Wheel Color",
-		"cpResetMasterColorWheelSaturation_title"      		   : "Reset Master Color Wheel Saturation",
-		"cpResetMasterColorWheelBrightness_title"              : "Reset Master Color Wheel Brightness",
-		"cpResetColorWheelTemperature_title"                   : "Reset Color Wheel Temperature",
-		"cpResetColorWheelTint_title"                          : "Reset Color Wheel Tint",
-		"cpResetColorWheelHue_title"                           : "Reset Color Wheel Hue",
-		"cpResetColorWheelMix_title"                           : "Reset Color Wheel Mix",
-    	"cpResetShadowsColorWheelColor_title"                  : "Reset Shadows Color Wheel Color",
-		"cpResetShadowsColorWheelSaturation_title"             : "Reset Shadows Color Wheel Saturation",
-		"cpResetShadowsColorWheelBrightness_title"             : "Reset Shadows Color Wheel Brightness",
-		"cpResetMidtonesColorWheelColor_title"                 : "Reset Midtones Color Wheel Color",
-		"cpResetMidtonesColorWheelSaturation_title"            : "Reset Midtones Color Wheel Saturation",
-		"cpResetMidtonesColorWheelBrightness_title"            : "Reset Midtones Color Wheel Brightness",
-		"cpResetHighlightsColorWheelColor_title"               : "Reset Highlights Color Wheel Color",
-		"cpResetHighlightsColorWheelSaturation_title"          : "Reset Highlights Color Wheel Saturation",
-		"cpResetHighlightsColorWheelBrightness_title"          : "Reset Highlights Color Wheel Brightness",
-		"finalcutpro_timeline_colorwheels_label"			   : "Timeline: Color Wheel Actions",
-		"finalcutpro_export_batch_manager_label"	           : "Manager: Batch Export",
-		"core_disk_automount_label"							   : "Disk Automount",
-		"cpFontConsole_title"								   : "Open Font Console",
-		"fcpx_fonts_action"									   : "Fonts",
-		"pleaseSelectATitle"								   : "Please select a title in the timeline and try again.",
-		"fontScanInitalisationMessage"                         : "CommandPost needs to scan your system for fonts.\n\nThis may take several minutes. Another alert will appear when the scanning is complete.",
-		"fontScanConsoleInitalisationMessage"                  : "CommandPost needs to scan your system for fonts.\n\nThis may take several minutes. The Console will appear when the scanning is complete.",
-		"fontScanComplete"                                     : "The font scan is complete! You can now use the Font Console.",
-		"fontScanError"										   : "An error has occured where the number of fonts in the CommandPost Console is different to the number of fonts in Final Cut Pro.\n\nThe font cache will be trashed. Please try again.",
-		"cpViewerBasicGrid_title"							   : "Toggle Viewer Basic Grid",
-		"cpViewerDraggableGuide_title"						   : "Toggle Viewer Draggable Guide",
-		"black"												   : "Black",
-		"white"										           : "White",
-		"basicGrid"											   : "Basic Grid",
-		"draggableGuide"             				           : "Draggable Guide",
-		"gridOverlay" 										   : "Grid Overlay",
-		"gridStyle"											   : "Grid Style",
-		"opacity"										       : "Opacity",
-		"spacing"										       : "Spacing",
-		"stillFrames"										   : "Still Frames",
-		"save"												   : "Save",
-		"layout"										       : "Layout",
-		"view"												   : "View",
-		"memory"											   : "Memory",
-		"fullFrame"											   : "Full Frame",
-		"leftVertical"									       : "Left Vertical",
-		"rightVertical"										   : "Right Vertical",
-		"topHorizontal"								           : "Top Horizontal",
-		"bottomHorizontal"                                     : "Bottom Horizontal",
-		"finalcutpro_viewer_overlays_label"					   : "Viewer: Overlays",
-		"saveCurrentFrameToStillsMemory"					   : "Save Current Frame to Stills Memory",
-		"viewStillsMemory"     						           : "View Stills Memory",
-		"cpPasteTextAsCaption_title"						   : "Paste Text as Caption",
-		"finalcutpro_timeline_captions_label"		           : "Timeline: Captions",
-		"finalcutpro_console_font_label"					   : "Console: Font",
-		"finalcutpro_fullscreen_dockicon_label"				   : "Full Screen Dock Icon Manager",
+        "cpResetMasterColorWheelColor_title"                   : "Reset Master Color Wheel Color",
+        "cpResetMasterColorWheelSaturation_title"              : "Reset Master Color Wheel Saturation",
+        "cpResetMasterColorWheelBrightness_title"              : "Reset Master Color Wheel Brightness",
+        "cpResetColorWheelTemperature_title"                   : "Reset Color Wheel Temperature",
+        "cpResetColorWheelTint_title"                          : "Reset Color Wheel Tint",
+        "cpResetColorWheelHue_title"                           : "Reset Color Wheel Hue",
+        "cpResetColorWheelMix_title"                           : "Reset Color Wheel Mix",
+        "cpResetShadowsColorWheelColor_title"                  : "Reset Shadows Color Wheel Color",
+        "cpResetShadowsColorWheelSaturation_title"             : "Reset Shadows Color Wheel Saturation",
+        "cpResetShadowsColorWheelBrightness_title"             : "Reset Shadows Color Wheel Brightness",
+        "cpResetMidtonesColorWheelColor_title"                 : "Reset Midtones Color Wheel Color",
+        "cpResetMidtonesColorWheelSaturation_title"            : "Reset Midtones Color Wheel Saturation",
+        "cpResetMidtonesColorWheelBrightness_title"            : "Reset Midtones Color Wheel Brightness",
+        "cpResetHighlightsColorWheelColor_title"               : "Reset Highlights Color Wheel Color",
+        "cpResetHighlightsColorWheelSaturation_title"          : "Reset Highlights Color Wheel Saturation",
+        "cpResetHighlightsColorWheelBrightness_title"          : "Reset Highlights Color Wheel Brightness",
+        "finalcutpro_timeline_colorwheels_label"               : "Timeline: Color Wheel Actions",
+        "finalcutpro_export_batch_manager_label"               : "Manager: Batch Export",
+        "core_disk_automount_label"                            : "Disk Automount",
+        "cpFontConsole_title"                                  : "Open Font Console",
+        "fcpx_fonts_action"                                    : "Fonts",
+        "pleaseSelectATitle"                                   : "Please select a title in the timeline and try again.",
+        "fontScanInitalisationMessage"                         : "CommandPost needs to scan your system for fonts.\n\nThis may take several minutes. Another alert will appear when the scanning is complete.",
+        "fontScanConsoleInitalisationMessage"                  : "CommandPost needs to scan your system for fonts.\n\nThis may take several minutes. The Console will appear when the scanning is complete.",
+        "fontScanComplete"                                     : "The font scan is complete! You can now use the Font Console.",
+        "fontScanError"                                        : "An error has occured where the number of fonts in the CommandPost Console is different to the number of fonts in Final Cut Pro.\n\nThe font cache will be trashed. Please try again.",
+        "cpViewerBasicGrid_title"                              : "Toggle Viewer Basic Grid",
+        "cpViewerDraggableGuide_title"                         : "Toggle Viewer Draggable Guide",
+        "black"                                                : "Black",
+        "white"                                                : "White",
+        "basicGrid"                                            : "Basic Grid",
+        "draggableGuide"                                       : "Draggable Guide",
+        "gridOverlay"                                          : "Grid Overlay",
+        "gridStyle"                                            : "Grid Style",
+        "opacity"                                              : "Opacity",
+        "spacing"                                              : "Spacing",
+        "stillFrames"                                          : "Still Frames",
+        "save"                                                 : "Save",
+        "layout"                                               : "Layout",
+        "view"                                                 : "View",
+        "memory"                                               : "Memory",
+        "fullFrame"                                            : "Full Frame",
+        "leftVertical"                                         : "Left Vertical",
+        "rightVertical"                                        : "Right Vertical",
+        "topHorizontal"                                        : "Top Horizontal",
+        "bottomHorizontal"                                     : "Bottom Horizontal",
+        "finalcutpro_viewer_overlays_label"                    : "Viewer: Overlays",
+        "saveCurrentFrameToStillsMemory"                       : "Save Current Frame to Stills Memory",
+        "viewStillsMemory"                                     : "View Stills Memory",
+        "cpPasteTextAsCaption_title"                           : "Paste Text as Caption",
+        "finalcutpro_timeline_captions_label"                  : "Timeline: Captions",
+        "finalcutpro_console_font_label"                       : "Console: Font",
+        "finalcutpro_fullscreen_dockicon_label"                : "Full Screen Dock Icon Manager"
     }
 }
