--- a/src/extensions/cp/apple/finalcutpro/strings/ja/10.4.0.strings
+++ b/src/extensions/cp/apple/finalcutpro/strings/ja/10.4.0.strings
@@ -3,6 +3,14 @@
 <!-- Missing I18N keys values for FCPX. Generally prefixed with "CP" to avoid clashes with existing keys.  -->
 <plist version="1.0">
 <dict>
+    <key>CPViewerViewOptimized</key>
+    <string>最適化／オリジナル</string>
+    <key>CPViewerViewProxy</key>
+    <string>プロキシ</string>
+    <key>CPViewerViewBetterQuality</key>
+    <string>高品質</string>
+    <key>CPViewerViewBetterPerformance</key>
+    <string>パフォーマンス優先</string>
     <key>CPColorBoardMidtones</key>
     <string>中間色調</string>
 </dict>
