--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -302,7 +302,7 @@
         "finalcutpro_console_label"                        : "Console",
         "changeBackupIntervalTextbox"                      : "What would you like to set your Final Cut Pro Backup Interval to (in minutes)?",
         "cpStepMoveUp_title"                               : "Step Move Focussed Window: Up",
-        "attachLog"                                        : "Attach Error Log",
+        "attachLog"                                        : "Attach the entire contents of the CommandPost Error Log.",
         "shareDetails_Youku"                               : "Type: Youku\nLogin: %{login}\nTitle: %{title}",
         "noteOff"                                          : "Note Off",
         "bugReport"                                        : "Bug Report",
@@ -566,7 +566,7 @@
         "pluginAction"                                     : "Action",
         "cpShowTimelineInPlayer_title"                     : "Show Timeline in Player",
         "sharedPasteboardRootFolder"                       : "Shared Pasteboard Root Folder",
-        "attachScreenshot"                                 : "Attach Screenshot",
+        "attachScreenshot"                                 : "Attach a screenshot of all of your screens, taken just before this feedback form appeared.",
         "cpMoveAndResizeExpand_title"                      : "Move & Resize Focussed Window: Expand",
         "finalcutpro_timeline_disablewaveforms_label"      : "Timeline: Waveform Drawing",
         "three"                                            : "3",
